absorb more of general FAQ; added server-less page